Fix double border issue in some themes

--- a/assets/css/learning-mode-compat.scss
+++ b/assets/css/learning-mode-compat.scss
@@ -295,6 +295,19 @@ $breakpoint: 782px;
 	}
 }
 
+.wp-block-sensei-lms-lesson-actions {
+	.wp-block-sensei-button.wp-block-button {
+		&.is-style-outline,
+		&.is-style-default {
+			border: none;
+
+			.wp-block-button__link {
+				border: solid 1px var(--sensei-secondary-color);
+			}
+		}
+	}
+}
+
 /* Quiz Notice */
 .sensei-course-theme-quiz-graded-notice {
 	&__title {
